--- a/Big-Mart-Sales-Prediction-Model.ipynb
+++ b/Big-Mart-Sales-Prediction-Model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In this Notebook, we will consider three learning models predict Sales for each Item in each Outlet"
+    "### In this Notebook, we will consider three learning models to predict Sales for each Item in each Outlet"
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,25 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "features = train.drop(columns=['Item_Identifier', 'Outlet_Identifier','Item_Outlet_Sales'])\n",
     "response = train[['Item_Outlet_Sales']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Function to calculate the Adjusted R squared\n",
-    "def r_sq_adj(y_true, y_pred, p):\n",
-    "    r = r2_score(y_true, y_pred)\n",
-    "    n = y_true.shape[0]\n",
-    "    return 1 - (1-r) * ((n - 1)/(n-p-1))"
    ]
   },
   {
@@ -88,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,22 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "kf = KFold(n_splits = 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for train_index, test_index in kf.split(features, y= response.values.reshape(-1)):\n",
-    "    x_train, y_train = features.loc[train_index], response.loc[train_index]\n",
-    "    x_test, y_test = features.loc[test_index], response.loc[test_index]"
    ]
   },
   {
@@ -165,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,67 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
-       "         normalize=False)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lr.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = lr.predict(x_test)"
+    "RMSE_lr = np.round(np.sqrt(np.mean(np.abs(cross_val_score(lr,features,y= response,scoring= 'neg_mean_squared_error', cv=kf)))),3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RMSE_lr = np.round(np.sqrt(mean_squared_error(y_test, y_pred)),3)"
+    "R_Sq_lr = np.round(np.mean(cross_val_score(lr,features,y= response,scoring= 'r2', cv=kf)),3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "R_Sq_Adj_lr = np.round(np.sqrt(r_sq_adj(y_test, y_pred, features.shape[1])),3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 1143.853, Adj R-Sq: 0.728\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('RMSE: {}, Adj R-Sq: {}'.format(RMSE_lr, R_Sq_Adj_lr))"
+    "print('RMSE: {}, R-Sq: {}'.format(RMSE_lr, R_Sq_lr))"
    ]
   },
   {
@@ -284,7 +222,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KNN - Model 2"
+    "## Linear Regression - Selected features - Model 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We will execlude features that are highly correlated and check if RMSE and R-Sq are improved."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "features[['Item_Visibility','Item_MRP','visibility_ratio','Item_MeanPrice_Ratio', 'specific_price']].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_features = features.drop(columns= ['Item_Weight','Item_Visibility','specific_price','visibility_ratio'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_sf = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RMSE_lr_sf = np.round(np.sqrt(np.mean(np.abs(cross_val_score(lr_sf,selected_features,y= response,scoring= 'neg_mean_squared_error', cv=kf)))),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R_Sq_lr_sf = np.round(np.mean(cross_val_score(lr_sf,selected_features,y= response,scoring= 'r2', cv=kf)),3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('RMSE: {}, R-Sq: {}'.format(RMSE_lr_sf, R_Sq_lr_sf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN - Model 3"
    ]
   },
   {
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,66 +358,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'algorithm': 'ball_tree', 'n_neighbors': 15, 'p': 1, 'weights': 'uniform'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn_fitted.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RMSE_knn= np.round(np.sqrt(np.abs(knn_fitted.best_score_)),3)"
+    "RMSE_knn = np.round(np.sqrt(np.mean(np.abs(cross_val_score(knn_fitted,features,y=response, scoring='neg_mean_squared_error',cv=kf)),3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = knn_fitted.predict(x_test)"
+    "R_Sq_knn = np.round(np.mean(cross_val_score(knn_fitted,selected_features,y= response,scoring= 'r2', cv=kf)),3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "R_Sq_Adj_knn = np.round(np.sqrt(r_sq_adj(y_test, y_pred, features.shape[1])),3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 1128.175, Adj R-Sq: 0.776\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('RMSE: {}, Adj R-Sq: {}'.format(RMSE_knn, R_Sq_Adj_knn))"
+    "print('RMSE: {}, Adj R-Sq: {}'.format(RMSE_knn, R_Sq_knn))"
    ]
   },
   {
@@ -464,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,27 +505,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'max_depth': 29, 'max_features': 31, 'min_samples_split': 412}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt_fitted.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,17 +541,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RMSE: 1093.056, Adj R-Sq: 0.763\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('RMSE: {}, Adj R-Sq: {}'.format(RMSE_dt, R_Sq_Adj_dt))"
    ]
@@ -684,68 +645,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RMSE</th>\n",
-       "      <th>Adjusted R-Sq</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Linear Regression</th>\n",
-       "      <td>1143.853</td>\n",
-       "      <td>0.728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>KNN</th>\n",
-       "      <td>1128.175</td>\n",
-       "      <td>0.776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Decision Tree</th>\n",
-       "      <td>1093.056</td>\n",
-       "      <td>0.763</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       RMSE  Adjusted R-Sq\n",
-       "Linear Regression  1143.853          0.728\n",
-       "KNN                1128.175          0.776\n",
-       "Decision Tree      1093.056          0.763"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.DataFrame([[RMSE_lr, R_Sq_Adj_lr], [RMSE_knn, R_Sq_Adj_knn], [RMSE_dt, R_Sq_Adj_dt]],\n",
+    "pd.DataFrame([[RMSE_lr, R_Sq_lr], [RMSE_knn, R_Sq_knn], [RMSE_dt, R_Sq_Adj_dt]],\n",
     "             columns=['RMSE','Adjusted R-Sq'], \n",
     "             index=['Linear Regression','KNN','Decision Tree'])"
    ]
